@@ -5,6 +5,11 @@ RELEASE_NOTES for spectrometer module
 See README for module info
 #==============================================================
 
+R1.0.4  6-Jun-2024  M. Dunning (mdunning)
+    Add PV to set event code for EVR timestamping
+    Add ability to build IOC binary (Basil Aljamal)
+    Exclude timing modules for PCDS (Basil Aljamal)
+
 R1.0.3  23-May-2024  M. Dunning (mdunning)
     Add EVR timestamping
 
